--- a/src/views/realtimeproducts.handlebars
+++ b/src/views/realtimeproducts.handlebars
@@ -26,4 +26,4 @@
        
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/realtime.js"></script>
+<script src="js/realtime.js"></script>
