--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -29,4 +29,4 @@
 
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="/public/index.js"></script>
+<script src="js/public/index.js"></script>
